--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "react-scripts test"
+    "test": "env-cmd -f .env.development jest --silent"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "env-cmd": "^10.1.0",
     "jose": "^5.9.6",
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
@@ -27,10 +28,8 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-redux": "^9.2.0",
-
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.4",
-
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "redux-promise-middleware": "^6.2.0",
@@ -49,8 +48,32 @@
     "babel-jest": "^29.7.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.1",
+    "react-test-renderer": "^19.0.0",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-environment": "^1.1.3"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "moduleNameMapper": {
+      "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/jest/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/jest/fileMock.js"
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest/setupTests.js"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      [
+        "@babel/preset-react",
+        {
+          "runtime": "automatic"
+        }
+      ]
+    ]
   }
 }
